--- a/theme/marketshop1/include/header.phtml
+++ b/theme/marketshop1/include/header.phtml
@@ -191,7 +191,7 @@
 				<div id="search" class="input-group">
 					<form id="search_mini_form" action="<%=g_store_url%>search.phtml" method="get">
 					<input id="filter_name" type="text" name="sp" value="" placeholder="<%=a("Search")%>" class="form-control input-lg"/>
-					<button type="button" class="button-search"><i class="fa fa-search"></i></button>
+					<button type="submit" class="button-search"><i class="fa fa-search"></i></button>
 					</form>
 				</div>
 			</div>
